--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Sketch</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Saira+Condensed&display=swap"
+      rel="stylesheet"
+    />
 
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
